# ARIA

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
archive/: ARIA_paper_8images real.tex  ARIA_paper_final.tex
archive/ARIA_ablation/: ARIA_internal_log.json  ablation_ARIA-Full.json  ablation_ARIA-noAGV.json  ablation_ARIA-noCBA.json  ablation_ARIA-noMA.json  ablation_ARIA-noPG.json  ablation_summary.json  summary.json
archive/ARIA_ablation_new/: ablation_table.json
archive/ARIA_cifar10_results/: ARIA_acc_matrix.json  EWC_acc_matrix.json  Static_CNN_acc_matrix.json  summary.json
archive/ARIA_results/: ARIA_acc_matrix.json  ARIA_log.csv  EWC_acc_matrix.json  EWC_log.csv  Static_MLP_acc_matrix.json  Static_MLP_log.csv
archive/ARIA_results (org images)/: ARIA_budget_log.json  ARIA_internal_log.json  ARIA_log.csv  EWC_acc_matrix.json  EWC_log.csv  Progressive_NN_log.csv  Static_MLP_acc_matrix.json  Static_MLP_log.csv  summary.json
archive/ARIA_results_v3/: ARIA_acc_matrix.json  ARIA_budget_log.json  ARIA_log.csv  EWC_acc_matrix.json  EWC_log.csv  (+2 more)
aria/: __init__.py  data.py  evaluate.py  metrics.py  model.py  plot.py  train.py
aria_v2_cifar10/: raw_matrices.npy  results_table.json
aria_v2_mnist/: raw_matrices.npy  results_table.json
examples/: split_cifar10_quickstart.py  split_mnist_quickstart.py
paper/: ARIA_paper_v2.tex
results/: ARIA_cifar10_results_table.json  ARIA_results_table.json
scripts/: ablation.py  main.py
tests/: test_metrics.py  test_model.py  test_train.py
(+18 files in other folders)
